[tool.poetry]
name = "poetry init"
version = "0.1.0"
description = "Pet-project on FastAPI"
authors = ["berendovychRB <ruslan.berendovych@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
databases = "^0.4.3"
email-validator = "^1.1.3"
fastapi-jwt-auth = "^0.5.0"
fastapi-login = "^1.6.3"
jose = "^1.0.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.1"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.3.24"
starlette = "^0.14.2"
pydantic = "^1.8.2"
python-dotenv = "^0.19.0"
cryptography = "^3.4.7"
python-jose = "^3.3.0"
bcrypt = "^3.2.0"
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "^21.7b0"
pre-commit = "^2.14.0"
ipdb = "^0.13.9"
ipython = "^7.26.0"
pytest = "^6.2.4"
requests = "^2.26.0"
pymongo = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true